--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -7,7 +7,8 @@
 <div class="container" style="background-color:#d3d3d3">
 <!-- <mat&#45;grid&#45;tile colspan="2"> -->
 <div class="row">
-<div class="col-md-4">
+<div class="col-md-12">
+<div class="col-md-8">
 
  <!-- <div fxFlex="151"  fxLayoutGap="10"> -->
     <mat-card>
@@ -89,6 +90,8 @@
         </mat-form-field>
       </form>
     </mat-card>
+ </div>
+<div class="col-md-4">
 
     <mat-card>
       <h1>Appraisal</h1>
