--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -11,6 +11,7 @@
 <div class="col-md-8">
 
  <!-- <div fxFlex="151"  fxLayoutGap="10"> -->
+<!--  {{diagnostic}} -->
     <mat-card>
       <h1>Basic Info</h1>
       <form #heroForm="ngForm">
@@ -121,3 +122,5 @@
  </div>
  </div>
  </div>
+
+<app-draft [hero]="model" [appraisal]="appraisal"></app-draft>
