--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 html { background-color: #d3d3d3; }
 body { background-color: #d3d3d3; }
+button { background-color: transparent; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
