--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,30 @@
 /* html, body { height: 100%; } */
 /* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 /* html, body { height: 100%; } */
-/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-html { background-color: #d3d3d3; }
-body { background-color: #d3d3d3; }
-button { background-color: transparent; }
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+/* @import "~https://fonts.googleapis.com/icon?family=Material+Icons"; */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+html {
+  background-color: #d3d3d3;
+}
+body {
+  background-color: #d3d3d3;
+}
+button {
+  background-color: transparent;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
