--- a/src/app/draft/draft.component.html
+++ b/src/app/draft/draft.component.html
@@ -18,12 +18,14 @@
         <div class="col-md-2  ">
           <mat-card>
             <div class="row; text-center ">
+		    <mat-button-toggle-group #group="matButtonToggleGroup">
               <mat-button-toggle>
                 <mat-icon (click)="this.editT()">edit</mat-icon>
               </mat-button-toggle>
-              <button mat-button>
-                <mat-icon (click)="this.editF()">refresh</mat-icon>
-              </button>
+              <mat-button-toggle>
+                <mat-icon (click)="this.refresh(hero)">refresh</mat-icon>
+              </mat-button-toggle>
+		    </mat-button-toggle-group >
             </div>
           </mat-card>
         </div>
