gonna abandon dynamic bs and use a button

--- a/src/app/draft/draft.component.html
+++ b/src/app/draft/draft.component.html
@@ -10,7 +10,7 @@
           <mat-card>
             <angular-editor
               [config]="editorConfig"
-              [ngModel]="swapped"
+              [ngModel]="draft"
             ></angular-editor>
           </mat-card>
         </div>
