implemented objservable, hero and app being hsraed up to date

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- <router&#45;outlet></router&#45;outlet> -->
   <app-form> </app-form>
+    <app-draft ></app-draft>
+    <app-draft ></app-draft>
+    <app-draft ></app-draft>
+    <app-draft ></app-draft>
