--- a/src/app/draft/draft.component.html
+++ b/src/app/draft/draft.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- <br /> -->
   <br />
-  {{ hero | json }}
+  {{ message | json }}
 
   <div class="col-md-12 ; mx-auto">
     <div class="row">
@@ -10,30 +10,31 @@
           <mat-card>
             <angular-editor
               [config]="editorConfig"
-              [ngModel]="draft"
+              [ngModel]="model"
             ></angular-editor>
           </mat-card>
         </div>
-     </div>
-        <div class="col-md-2  ">
-          <mat-card>
-            <div class="row; text-center ">
-		    <mat-button-toggle-group #group="matButtonToggleGroup">
+      </div>
+      <div class="col-md-2  ">
+        <mat-card>
+          <div class="row; text-center ">
+            <mat-button-toggle-group #group="matButtonToggleGroup">
               <mat-button-toggle>
                 <mat-icon (click)="this.editT()">edit</mat-icon>
               </mat-button-toggle>
               <mat-button-toggle>
                 <mat-icon (click)="this.refresh(hero)">refresh</mat-icon>
               </mat-button-toggle>
-		    </mat-button-toggle-group >
-            </div>
-          </mat-card>
-        </div>
+            </mat-button-toggle-group>
+          </div>
+        </mat-card>
+      </div>
 
       <ng-template #elseBlock>
         <div class="col-md-10  ">
           <mat-card>
-            {{ draft }}
+            {{ hero | json }}
+            {{ app | json }}
           </mat-card>
         </div>
 
