--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -120,6 +120,28 @@
               <mat-radio-button value="5">5</mat-radio-button>
             </mat-radio-group>
           </p>
+     <span style="color:grey"> Social: </span>
+          <p>
+            <mat-radio-group [(ngModel)]="appraisal.social">
+              <mat-radio-button value="1">1</mat-radio-button>
+              <mat-radio-button value="2">2</mat-radio-button>
+              <mat-radio-button value="3">3</mat-radio-button>
+              <mat-radio-button value="4">4</mat-radio-button>
+              <mat-radio-button value="5">5</mat-radio-button>
+            </mat-radio-group>
+          </p>
+     <span style="color:grey"> Something: </span>
+          <p>
+            <mat-radio-group [(ngModel)]="appraisal.social">
+              <mat-radio-button value="1">1</mat-radio-button>
+              <mat-radio-button value="2">2</mat-radio-button>
+              <mat-radio-button value="3">3</mat-radio-button>
+              <mat-radio-button value="4">4</mat-radio-button>
+              <mat-radio-button value="5">5</mat-radio-button>
+            </mat-radio-group>
+          </p>
+
+
           <div class="float-right">
             <button class="btn btn-primary" (click)="onAppraisalSubmit(appraisal)">
               Submit
