added some of the paras and merged the forms

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -130,32 +130,6 @@
               <mat-radio-button value="5">5</mat-radio-button>
             </mat-radio-group>
           </p>
-<<<<<<< HEAD
-     <span style="color:grey"> Social: </span>
-          <p>
-            <mat-radio-group [(ngModel)]="appraisal.social">
-              <mat-radio-button value="1">1</mat-radio-button>
-              <mat-radio-button value="2">2</mat-radio-button>
-              <mat-radio-button value="3">3</mat-radio-button>
-              <mat-radio-button value="4">4</mat-radio-button>
-              <mat-radio-button value="5">5</mat-radio-button>
-            </mat-radio-group>
-          </p>
-     <span style="color:grey"> Something: </span>
-          <p>
-            <mat-radio-group [(ngModel)]="appraisal.social">
-              <mat-radio-button value="1">1</mat-radio-button>
-              <mat-radio-button value="2">2</mat-radio-button>
-              <mat-radio-button value="3">3</mat-radio-button>
-              <mat-radio-button value="4">4</mat-radio-button>
-              <mat-radio-button value="5">5</mat-radio-button>
-            </mat-radio-group>
-          </p>
-
-
-          <div class="float-right">
-            <button class="btn btn-primary" (click)="onAppraisalSubmit(appraisal)">
-=======
           <span style="color:grey"> Conceptual Thinking: </span>
           <section class="example-section">
             <mat-checkbox
@@ -249,18 +223,22 @@
               class="btn btn-primary"
               (click)="onAppraisalSubmit(appraisal)"
             >
->>>>>>> 9ab726c58e14278ce96338ff047013decb8de9ee
               Submit
             </button>
+            <!-- </div> -->
+            <!-- </mat&#45;card> -->
+            <!-- </div> -->
+            <!-- </div> -->
+            <!--  -->
+            <!-- <app&#45;draft [hero]="model" [appraisal]="appraisal"></app&#45;draft> -->
+            <!-- <app&#45;draft [hero]="model" [appraisal]="appraisal"></app&#45;draft> -->
+            form
+            {{ hero | json }}
+            {{ app | json }}
           </div>
+          <!-- </div> -->
         </mat-card>
       </div>
     </div>
-    <!--  -->
-    <!-- <app&#45;draft [hero]="model" [appraisal]="appraisal"></app&#45;draft> -->
-    <!-- <app&#45;draft [hero]="model" [appraisal]="appraisal"></app&#45;draft> -->
-    form
-    {{ hero | json }}
-    {{ app | json }}
   </div>
 </div>
